Ref #77 - Added ability to collect user votes on articles

--- a/views/kb.hbs
+++ b/views/kb.hbs
@@ -40,43 +40,63 @@
 		<div class="body_text">
             {{{kb_body}}}
         </div>
+        {{#if config.settings.allow_voting}}
+            <div class="row">
+                <div class="voting text-right col-lg-12">
+                    <span>Was this article helpful?</span>
+                    <button id="btnUpvote" class="btn btn-sm btn-default"><i class="fa fa-thumbs-o-up" aria-hidden="true"></i></button>
+                    <button id="btnDownvote" class="btn btn-sm btn-default"><i class="fa fa-thumbs-o-down" aria-hidden="true"></i></button>
+                    <span>
+                        <strong>Votes:</strong> 
+                        {{#if result.kb_votes}}
+                            {{result.kb_votes}}
+                        {{else}}
+                            0
+                        {{/if}}                  
+                    </span>
+                </div>
+            </div>
+        {{/if}}
 		{{#if config.settings.show_kb_meta}}
-			<div class="panel panel-primary" style="margin-top: 35px;">
-				<div class="panel-heading">Article details:</div>
-				<div class="panel-body">
-                    <h5 class="col-sm-12 col-lg-6">
-						<strong>Published date:</strong> {{format_date result.kb_published_date}}
-					</h5>
-					<h5 class="col-sm-12 col-lg-6">
-						<strong>Last updated:</strong> {{format_date result.kb_last_updated}}
-                        {{#if result.kb_last_update_user}}
-                            <span class="text-info">({{result.kb_last_update_user}})</span>
+            <div class="row">
+                <div class="panel panel-primary" style="margin-top: 35px;">
+                    <div class="panel-heading">Article details:</div>
+                    <div class="panel-body">
+                        <h5 class="col-sm-12 col-lg-6">
+                            <strong>Published date:</strong> {{format_date result.kb_published_date}}
+                        </h5>
+                        <h5 class="col-sm-12 col-lg-6">
+                            <strong>Last updated:</strong> {{format_date result.kb_last_updated}}
+                            {{#if result.kb_last_update_user}}
+                                <span class="text-info">({{result.kb_last_update_user}})</span>
+                            {{/if}}
+                        </h5>
+                        {{#if result.kb_permalink}}
+                            <h5 class="col-sm-12 col-lg-6">
+                                <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{encodeURI result.kb_permalink}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            </h5>
+                        {{else}}
+                            <h5 class="col-sm-12 col-lg-6">
+                                <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{result._id}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            </h5>
                         {{/if}}
-					</h5>
-                    {{#if result.kb_permalink}}
+                        {{#if result.kb_author}}
+                            <h5 class="col-sm-12 col-lg-6">
+                                <strong>Author:</strong> <span class="text-info">{{result.kb_author}} {{#if config.settings.show_author_email}}({{result.kb_author_email}}){{/if}}</span>
+                            </h5>
+                        {{/if}}
+                        {{#if result.kb_permalink}}
                         <h5 class="col-sm-12 col-lg-6">
-                            <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{encodeURI result.kb_permalink}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                            <strong>Permalink:</strong> <a href="{{current_url}}/kb/{{result.kb_permalink}}" target="_blank">{{current_url}}/kb/{{result.kb_permalink}}</a>
                         </h5>
-                    {{else}}
-                        <h5 class="col-sm-12 col-lg-6">
-						    <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{result._id}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-					    </h5>
-                    {{/if}}
-                    {{#if result.kb_author}}
-                        <h5 class="col-sm-12 col-lg-6">
-                            <strong>Author:</strong> <span class="text-info">{{result.kb_author}} {{#if config.settings.show_author_email}}({{result.kb_author_email}}){{/if}}</span>
-                        </h5>
-                    {{/if}}
-					{{#if result.kb_permalink}}
-					<h5 class="col-sm-12 col-lg-6">
-						<strong>Permalink:</strong> <a href="{{current_url}}/kb/{{result.kb_permalink}}" target="_blank">{{current_url}}/kb/{{result.kb_permalink}}</a>
-					</h5>
-					{{/if}}
-				</div>
-			</div>
+                        {{/if}}
+                    </div>
+                </div>
+            </div>
 		{{/if}}
 		<h5 class="keywords">
 			{{{split_keywords result.kb_keywords}}}
 		</h5>
 	</div>
+    <input type="hidden" id="doc_id" value={{result._id}}>
 </div>
