--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -44,6 +44,16 @@
                     </p>	
                 </div>
                 <div class="form-group">
+                    <label class="control-label" for="allow_voting">Allow voting:</label>
+                    <select class="form-control" name="allow_voting">
+                        <option {{select_state config.settings.allow_voting true}}>true</option>
+                        <option {{select_state config.settings.allow_voting false}}>false</option>
+                    </select>
+                    <p class="help-block">
+                        Whether to allow users to vote on an article
+                    </p>	
+                </div>
+                <div class="form-group">
                     <label class="control-label" for="num_top_results">Number of top articles shown on homepage:</label>
                     <input type="number" class="form-control" name="num_top_results" value="{{config.settings.num_top_results}}" required>
                     <p class="help-block">
