--- a/views/edit.hbs
+++ b/views/edit.hbs
@@ -74,8 +74,12 @@
                 <li class="list-group-item">
                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
                         <a class="btn btn-sm btn-warning" target="_blank" href="{{app_context}}/kb/{{result._id}}">Preview</a>
-                        <a class="btn btn-sm btn-info" target="_blank" href="{{app_context}}/kb/resetviewCount/{{result._id}}">Reset views</a>
                         <a class="btn btn-sm btn-danger" href="{{app_context}}/delete/{{result._id}}" id="del_post" onclick="return confirm('Are you sure you want to delete this article?');">Delete</a>
+                    </div>
+                    &nbsp;
+                     <div class="btn-group btn-group-justified" role="group" aria-label="...">
+                        <a class="btn btn-sm btn-info" target="_blank" href="{{app_context}}/kb/resetviewCount/{{result._id}}">Reset views</a>
+                        <a class="btn btn-sm btn-default" target="_blank" href="{{app_context}}/kb/resetvoteCount/{{result._id}}">Reset votes</a>
                     </div>
                 </li>
                 <li class="list-group-item">
