--- a/views/kb.hbs
+++ b/views/kb.hbs
@@ -17,19 +17,17 @@
 <div class="row">
     {{#ifBoth config.settings.show_featured_articles config.settings.show_featured_in_article}}
         <div class="col-md-2 col-md-offset-1 col-lg-2 col-lg-offset-1">
-            <div class="panel panel-default" style="margin-top: 30px;">
-                <div class="panel-heading">Featured articles</div>
-                <div class="panel-body">
-                    <ul class="list-group">
-                        {{#each featured_results}}
-                            {{#if this.kb_permalink}}
-                                <li class="list-group-item"><h4><a href="{{app_context}}/kb/{{this.kb_permalink}}">{{this.kb_title}}</a></h4></li>
-                            {{else}}
-                                <li class="list-group-item"><h4><a href="{{app_context}}/kb/{{this._id}}">{{this.kb_title}}</a></h4></li>
-                            {{/if}}
-                        {{/each}}
-                    </ul>
-                </div>
+            <div style="margin-top: 30px;">
+                <ul class="list-group">
+                    <li class="list-group-item list-group-heading">Featured articles</li>
+                    {{#each featured_results}}
+                        {{#if this.kb_permalink}}
+                            <li class="list-group-item"><h4><a href="{{app_context}}/kb/{{this.kb_permalink}}">{{this.kb_title}}</a></h4></li>
+                        {{else}}
+                            <li class="list-group-item"><h4><a href="{{app_context}}/kb/{{this._id}}">{{this.kb_title}}</a></h4></li>
+                        {{/if}}
+                    {{/each}}
+                </ul>
             </div>
         </div>
         <div class="col-md-8 col-lg-8">
@@ -59,37 +57,39 @@
         {{/if}}
 		{{#if config.settings.show_kb_meta}}
             <div class="row">
-                <div class="panel panel-primary" style="margin-top: 35px;">
-                    <div class="panel-heading">Article details:</div>
-                    <div class="panel-body">
-                        <h5 class="col-sm-12 col-lg-6">
-                            <strong>Published date:</strong> {{format_date result.kb_published_date}}
-                        </h5>
-                        <h5 class="col-sm-12 col-lg-6">
-                            <strong>Last updated:</strong> {{format_date result.kb_last_updated}}
-                            {{#if result.kb_last_update_user}}
-                                <span class="text-info">({{result.kb_last_update_user}})</span>
+                <div class="col-lg-12">
+                    <div class="panel panel-primary" style="margin-top: 35px;">
+                        <div class="panel-heading">Article details:</div>
+                        <div class="panel-body">
+                            <h5 class="col-sm-12 col-lg-6">
+                                <strong>Published date:</strong> {{format_date result.kb_published_date}}
+                            </h5>
+                            <h5 class="col-sm-12 col-lg-6">
+                                <strong>Last updated:</strong> {{format_date result.kb_last_updated}}
+                                {{#if result.kb_last_update_user}}
+                                    <span class="text-info">({{result.kb_last_update_user}})</span>
+                                {{/if}}
+                            </h5>
+                            {{#if result.kb_permalink}}
+                                <h5 class="col-sm-12 col-lg-6">
+                                    <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{encodeURI result.kb_permalink}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                                </h5>
+                            {{else}}
+                                <h5 class="col-sm-12 col-lg-6">
+                                    <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{result._id}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                                </h5>
                             {{/if}}
-                        </h5>
-                        {{#if result.kb_permalink}}
+                            {{#if result.kb_author}}
+                                <h5 class="col-sm-12 col-lg-6">
+                                    <strong>Author:</strong> <span class="text-info">{{result.kb_author}} {{#if config.settings.show_author_email}}({{result.kb_author_email}}){{/if}}</span>
+                                </h5>
+                            {{/if}}
+                            {{#if result.kb_permalink}}
                             <h5 class="col-sm-12 col-lg-6">
-                                <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{encodeURI result.kb_permalink}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
+                                <strong>Permalink:</strong> <a href="{{current_url}}/kb/{{result.kb_permalink}}" target="_blank">{{current_url}}/kb/{{result.kb_permalink}}</a>
                             </h5>
-                        {{else}}
-                            <h5 class="col-sm-12 col-lg-6">
-                                <strong>Share article:</strong>&nbsp;<a href="mailto:?subject={{result.kb_title}}&body={{encodeURI current_url}}/kb/{{result._id}}" target="_top"><i class="fa fa-envelope" aria-hidden="true"></i></a>
-                            </h5>
-                        {{/if}}
-                        {{#if result.kb_author}}
-                            <h5 class="col-sm-12 col-lg-6">
-                                <strong>Author:</strong> <span class="text-info">{{result.kb_author}} {{#if config.settings.show_author_email}}({{result.kb_author_email}}){{/if}}</span>
-                            </h5>
-                        {{/if}}
-                        {{#if result.kb_permalink}}
-                        <h5 class="col-sm-12 col-lg-6">
-                            <strong>Permalink:</strong> <a href="{{current_url}}/kb/{{result.kb_permalink}}" target="_blank">{{current_url}}/kb/{{result.kb_permalink}}</a>
-                        </h5>
-                        {{/if}}
+                            {{/if}}
+                        </div>
                     </div>
                 </div>
             </div>
