--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -147,6 +147,13 @@
                         Controls whether links within articles open a new page (tab)
                     </p>	
                 </div>
+                <div class="form-group">
+                    <label class="control-label" for="links_blank_page">Google analytics code:</label>
+                    <textarea rows="5" class="form-control" name="google_analytics">{{config.settings.google_analytics}}</textarea>
+                    <p class="help-block">
+                        Adds Google Analytics to public facing pages. Include the entire code from Google including the &lt;script&gt; tags.
+                    </p>	
+                </div>
             </form>
 		</div>
 	</div>
