--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -170,6 +170,16 @@
                     </p>	
                 </div>
                 <div class="form-group">
+                    <label class="control-label" for="add_header_anchors">Add header anchors:</label>
+                    <select class="form-control" name="add_header_anchors">
+                        <option {{select_state config.settings.add_header_anchors true}}>true</option>
+                        <option {{select_state config.settings.add_header_anchors false}}>false</option>
+                    </select>
+                    <p class="help-block">
+                        Whether to add anchors to all heading tags for linking within articles or direct linking from other articles
+                    </p>	
+                </div>
+                <div class="form-group">
                     <label class="control-label" for="links_blank_page">Google analytics code:</label>
                     <textarea rows="5" class="form-control" name="google_analytics">{{config.settings.google_analytics}}</textarea>
                     <p class="help-block">
