--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -176,7 +176,7 @@
                         <option {{select_state config.settings.add_header_anchors false}}>false</option>
                     </select>
                     <p class="help-block">
-                        Whether to add anchors to all heading tags for linking within articles or direct linking from other articles
+                        Whether to add HTML anchors to all heading tags for linking within articles or direct linking from other articles
                     </p>	
                 </div>
                 <div class="form-group">
