--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -73,6 +73,20 @@ html{
     border: none;
 }
 
+#searchResult{
+    right: -2px;
+    left: 0px;
+    min-height: 200px;
+    position: absolute;
+    padding-top: 5px;
+    z-index: 1000;
+}
+
+.searchResultList li{
+    background-color: #ecf0f1;
+    border: 1px solid #dce4ec;
+}
+
 .CodeMirror {
     height: calc(100vh - 110px - 175px - 70px) !important;
     overflow: auto;
