--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -180,6 +180,16 @@
                     </p>	
                 </div>
                 <div class="form-group">
+                    <label class="control-label" for="typeahead_search">Add typeahead/live search:</label>
+                    <select class="form-control" name="typeahead_search">
+                        <option {{select_state config.settings.typeahead_search true}}>true</option>
+                        <option {{select_state config.settings.typeahead_search false}}>false</option>
+                    </select>
+                    <p class="help-block">
+                        Add live typeahead search results on the search inputs
+                    </p>	
+                </div>
+                <div class="form-group">
                     <label class="control-label" for="links_blank_page">Google analytics code:</label>
                     <textarea rows="5" class="form-control" name="google_analytics">{{config.settings.google_analytics}}</textarea>
                     <p class="help-block">
