Added what I hope is a better logo. Also displays logo on non user facing pages. For two reasons. 1. It looks better after installing. 2. It makes quickly changing the logo to your own much easier.

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -58,6 +58,14 @@ html{
     height: 50px;
 }
 
+.brand-image{
+    padding: 12px 10px 0 30px;    
+}
+
+.navbar-brand{
+    padding-left: 30px;
+}
+
 .view_count{
     font-size: 14px;
 }
