--- a/views/layouts/layout.hbs
+++ b/views/layouts/layout.hbs
@@ -45,6 +45,7 @@
 		<link rel="stylesheet" href="{{app_context}}/stylesheets/mermaid.css">
 		<link rel="stylesheet" href="{{app_context}}/stylesheets/bootstrap-tokenfield.css">
         <link rel="stylesheet" href="{{app_context}}/stylesheets/jpushmenu.css">
+        <link rel='icon' href='/favicon.png' />
 		<script src="{{app_context}}/jquery/jquery.min.js"></script>
         <script>{{{state}}}</script>
 		<script src="{{app_context}}/bootstrap/js/bootstrap.min.js"></script>
