Accidentally removed Google analytics from settings page.

--- a/views/settings.hbs
+++ b/views/settings.hbs
@@ -103,6 +103,13 @@
                                 If enabled non authenticated users can submit article suggestions for approval
                             </p>	
                         </div>
+                        <div class="form-group">
+                            <label class="control-label" for="links_blank_page">Google analytics code:</label>
+                            <textarea rows="5" class="form-control" name="google_analytics">{{config.settings.google_analytics}}</textarea>
+                            <p class="help-block">
+                                Adds Google Analytics to public facing pages. Include the entire code from Google including the &lt;script&gt; tags.
+                            </p>	
+                        </div>
                     </div>
                     <!-- Website settings -->
 
